added formspree.io contact form

--- a/index.html
+++ b/index.html
@@ -99,7 +99,19 @@
             </div>
 
             <div id="contact" class="section scrollspy">
-                <p>contact </p>
+              <div id="contact">
+                <h2>Get in Touch</h2>
+                <div id="contact-form">
+                    <form method="POST" action="https://formspree.io/amalgaminnovationsllc@gmail.com">
+                        <input type="hidden" name="_subject" value="Contact request from personal website" />
+                        <input type="email" name="_replyto" placeholder="Your email" required>
+                        <textarea name="message" placeholder="Your message" required></textarea>
+                        <button type="submit">Send</button>
+                    </form>
+                </div>
+                <!-- End #contact-form -->
+            </div>
+            <!-- End #contact -->
             </div>
           </div>
       </div>
