--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
     <!-- Navbar -->
     <nav>
         <div class="nav-wrapper">
-          <a class="brand-logo"> Amalgam Innovations</a>
-          <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <a class="brand-logo center"> Amalgam Innovations</a>
+          <ul id="nav-mobile" class="left hide-on-med-and-down">
             <!-- ScrollSpy links -->
             <li><a href="#introduction">Introduction</a></li>
-            <li><a href="#projects">projects</a></li>
-            <li><a href="#team">team</a></li>
-            <li><a href="#contact">contact</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#team">Team</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
       </nav>
       <div class="container">
           <!-- Parallax -->
           <div class="parallax-container col s12"></div>
-              <div class="parallax col s12"><img  src="images/logo1.jpg"></div>
+              <div class="parallax col s12 center"><img  src="images/logo1.jpg"></div>
           </div>
       <div class = 'container'>
         <!-- Scrollspy -->
@@ -39,8 +39,8 @@
                         <div class="card-content white-text">
                           <span class="card-title">introduction</span>
                           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam laoreet, quam ultricies efficitur blandit, lacus purus malesuada odio, eu tempor purus est nec eros. Vestibulum dignissim orci nec auctor malesuada. Integer dignissim mauris nibh, ut faucibus ex vehicula nec. Ut aliquet, sapien ac luctus semper, metus lectus dapibus felis, eget feugiat magna tellus ut metus. Aenean ac justo massa. Donec vel velit sapien. Quisque ultricies quis nibh non suscipit. Vivamus eu tincidunt enim. Vestibulum nec ipsum auctor, venenatis mauris vitae, tristique augue. Nulla ac vulputate justo. Maecenas sit amet purus imperdiet nunc commodo iaculis. Integer non ornare enim. Maecenas pretium ex quam, ut egestas lectus pretium luctus. Donec leo massa, maximus sed efficitur id, lobortis sit amet mauris. Quisque ultrices varius pretium.
-                            <br><br>
-                              Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Ut dictum pretium tellus quis bibendum. Donec non turpis sit amet nunc suscipit mattis eget in elit. Nunc nec bibendum erat, in pulvinar risus. Nulla euismod tincidunt diam, et varius elit scelerisque blandit. Fusce euismod ex dui, ac tristique sapien varius sed. Aliquam consectetur consectetur lacus, sed dictum neque rutrum ac. Aenean magna turpis, sagittis sed lectus eget, porta consequat nunc.</p>
+                          <br><br>
+                          Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Ut dictum pretium tellus quis bibendum. Donec non turpis sit amet nunc suscipit mattis eget in elit. Nunc nec bibendum erat, in pulvinar risus. Nulla euismod tincidunt diam, et varius elit scelerisque blandit. Fusce euismod ex dui, ac tristique sapien varius sed. Aliquam consectetur consectetur lacus, sed dictum neque rutrum ac. Aenean magna turpis, sagittis sed lectus eget, porta consequat nunc.</p>
                         </div>
                       </div>
                     </div>
