added bootstrap cdn

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-
-  <!DOCTYPE html>
+<!DOCTYPE html>
   <html>
     <head>
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
       <!--Import Google Icon Font-->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <!--Import materialize.css-->
@@ -15,7 +15,7 @@
     <!-- Navbar -->
     <nav>
         <div class="nav-wrapper">
-          <a class="brand-logo center"> Amalgam Innovations</a>
+          <a class="brand-logo center">Amalgam Innovations</a>
           <ul id="nav-mobile" class="left hide-on-med-and-down">
             <!-- ScrollSpy links -->
             <li><a href="#introduction">Introduction</a></li>
