added carousel for projects

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <link type="text/css" rel="stylesheet" href="css/style.css"/>
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     </head>
 
     <body>
@@ -49,9 +50,18 @@
           <!-- </div>
             <div class="parallax"><img src="images/logo1.jpg"></div>
           </div> -->
-            <div id="projects" class="section scrollspy">
+          <div class="container">
+            <div class="row">
+            <div id="projects" class="carousel carousel-slider section scrollspy col s12">
               <p>projects </p>
-            </div>
+              <br>
+                  <a class="carousel-item" href="#one!"><img src="http://via.placeholder.com/800/400"></a>
+                  <a class="carousel-item" href="#two!"><img src="http://via.placeholder.com/800/400"></a>
+                  <a class="carousel-item" href="#three!"><img src="http://via.placeholder.com/800/400"></a>
+                  <a class="carousel-item" href="#four!"><img src="http://via.placeholder.com/800/400"></a>
+            </div><!-- Closes ID project -->               
+          </div><!-- Closes Row -->       
+          </div><!-- Closes Container -->
 
             <div id="team" class="section scrollspy">
                 <div class="row">
