--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+      <!-- <img src="./images/abstract-galaxy.jpg" id="bg" alt=""> -->
     </head>
 
     <body>
     <!-- Navbar -->
     <nav>
-        <div class="nav-wrapper">
+        <div>
           <a class="brand-logo center">Amalgam Innovations</a>
+        </div>
           <ul id="nav-mobile" class="left hide-on-med-and-down">
             <!-- ScrollSpy links -->
             <li><a href="#introduction">Introduction</a></li>
@@ -24,7 +26,6 @@
             <li><a href="#team">Team</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
-        </div>
       </nav>
       <div class="container">
           <!-- Parallax -->
@@ -128,7 +129,7 @@
 
 
       <!-- Footer -->
-      <footer class="page-footer">
+      <footer>
           <div class="container">
        
           </div>
