changed footer color and also polished up my bad practice of using line breaks

--- a/index.html
+++ b/index.html
@@ -27,12 +27,13 @@
             <li><a href="#contact">Contact</a></li>
           </ul>
       </nav>
-      <div class="container">
-          <!-- Parallax -->
+
+      <!-- <div class="container">
+          Parallax
           <div class="parallax-container col s12"></div>
               <div class="parallax col s12 center"><img  src="images/logo1.jpg"></div>
-          </div>
-      <div class = 'container'>
+          </div> -->
+      <div class="container">
         <!-- Scrollspy -->
         <div class="row">
               <div id="introduction" class="section scrollspy">
@@ -52,10 +53,9 @@
             <div class="parallax"><img src="images/logo1.jpg"></div>
           </div> -->
           <div class="container">
+            <p>Projects </p>
             <div class="row">
             <div id="projects" class="carousel carousel-slider section scrollspy col s12">
-              <p>projects </p>
-              <br>
                   <a class="carousel-item" href="#one!"><img src="http://via.placeholder.com/800/400"></a>
                   <a class="carousel-item" href="#two!"><img src="http://via.placeholder.com/800/400"></a>
                   <a class="carousel-item" href="#three!"><img src="http://via.placeholder.com/800/400"></a>
@@ -129,7 +129,7 @@
 
 
       <!-- Footer -->
-      <footer>
+      <footer class="page-footer">
           <div class="container">
        
           </div>
