website updated to bootstrap and deleted material.io

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
   <html>
     <head>
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
       <!--Import Google Icon Font-->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <!--Import materialize.css-->
@@ -17,7 +20,7 @@
     <!-- Navbar -->
     <nav>
         <div>
-          <a class="brand-logo center">Amalgam Innovations</a>
+          <a class="brand-logo center navbar">Amalgam</a>
         </div>
           <ul id="nav-mobile" class="left hide-on-med-and-down">
             <!-- ScrollSpy links -->
@@ -40,10 +43,17 @@
                     <div class="col s12 ">
                       <div class="card red darken-1">
                         <div class="card-content white-text">
-                          <span class="card-title">introduction</span>
+                          <span class="card-title">INTRODUCTION</span>
                           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam laoreet, quam ultricies efficitur blandit, lacus purus malesuada odio, eu tempor purus est nec eros. Vestibulum dignissim orci nec auctor malesuada. Integer dignissim mauris nibh, ut faucibus ex vehicula nec. Ut aliquet, sapien ac luctus semper, metus lectus dapibus felis, eget feugiat magna tellus ut metus. Aenean ac justo massa. Donec vel velit sapien. Quisque ultricies quis nibh non suscipit. Vivamus eu tincidunt enim. Vestibulum nec ipsum auctor, venenatis mauris vitae, tristique augue. Nulla ac vulputate justo. Maecenas sit amet purus imperdiet nunc commodo iaculis. Integer non ornare enim. Maecenas pretium ex quam, ut egestas lectus pretium luctus. Donec leo massa, maximus sed efficitur id, lobortis sit amet mauris. Quisque ultrices varius pretium.
                           <br><br>
-                          Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Ut dictum pretium tellus quis bibendum. Donec non turpis sit amet nunc suscipit mattis eget in elit. Nunc nec bibendum erat, in pulvinar risus. Nulla euismod tincidunt diam, et varius elit scelerisque blandit. Fusce euismod ex dui, ac tristique sapien varius sed. Aliquam consectetur consectetur lacus, sed dictum neque rutrum ac. Aenean magna turpis, sagittis sed lectus eget, porta consequat nunc.</p>
+                          Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Ut dictum pretium tellus quis bibendum. Donec non turpis sit amet nunc suscipit mattis eget in elit. Nunc nec bibendum erat, in pulvinar risus. Nulla euismod tincidunt diam, et varius elit scelerisque blandit. Fusce euismod ex dui, ac tristique sapien varius sed. Aliquam consectetur consectetur lacus, sed dictum neque rutrum ac. Aenean magna turpis, sagittis sed lectus eget, porta consequat nunc.
+                          <br><br>
+                          Amalgam Innovations came into being when the four friendships were forged with the purpose of web development. All four partners have a passion for wines and beers. These passions range from simply enjoying the multitude and complexity of flavors to actually brewing their own beverages.
+                          Thomas Burchardt has a multitude of experience from being a science teacher, entrepreneurial work, and now web developer. He has consistently been able to provide ideas and overcome obstacles to bring those ideas to fruition.
+                          Karsten Rabe is a computer and technology aficionado. He has worked abroad in the peace corps, is multi-lingual,  and is exceptionally creative. During his time as a web developer others have learned to look to him for creative ways to solve web application problems.
+                          Calvin Leung is very attentive to user interface development and approaches all of his tasks with a sense of style that is very admirable. He has excelled at working in a team and bringing the best of Amalgam Innovations forward. His ability to talk through problems and react to changes quickly is a major credit to the company.
+                          Gregory May is an eclectic individual. He has been an engineer, electrician, writer, and now web developer. He enjoys working with big data and providing unique viewpoints to whatever situation arises.
+                        </p>
                         </div>
                       </div>
                     </div>
@@ -56,10 +66,10 @@
             <p>Projects </p>
             <div class="row">
             <div id="projects" class="carousel carousel-slider section scrollspy col s12">
-                  <a class="carousel-item" href="#one!"><img src="http://via.placeholder.com/800/400"></a>
-                  <a class="carousel-item" href="#two!"><img src="http://via.placeholder.com/800/400"></a>
-                  <a class="carousel-item" href="#three!"><img src="http://via.placeholder.com/800/400"></a>
-                  <a class="carousel-item" href="#four!"><img src="http://via.placeholder.com/800/400"></a>
+                  <a class="carousel-item" href="#one!"><img src="http://via.placeholder.com/800x400"></a>
+                  <a class="carousel-item" href="#two!"><img src="http://via.placeholder.com/800x400"></a>
+                  <a class="carousel-item" href="#three!"><img src="http://via.placeholder.com/800x400"></a>
+                  <a class="carousel-item" href="#four!"><img src="http://via.placeholder.com/800x400"></a>
             </div><!-- Closes ID project -->               
           </div><!-- Closes Row -->       
           </div><!-- Closes Container -->
