--- a/index2.html
+++ b/index2.html
@@ -19,23 +19,29 @@
                 <a>AMALGAM INNOVATIONS</a>
         </div>
         
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <nav class="navbar sticky-top navbar-expand-lg navbar-light">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-center" id="navbarTogglerDemo01">
               <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="#intro">Introduction</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="#proj">Projects</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#mems">Members</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#contact">Contact Us!</a>
                 </li>
               </ul>
             </div>
           </nav>
 
-          <h5>INTRODUCTION</h5>
+          <h5 id="intro">INTRODUCTION</h5>
           <div class="jumbotron jumbotron-fluid">
                 <div class="container">
                     <p>
@@ -55,7 +61,7 @@
 
 
 
-            <h5>PROJECTS?</h5>
+            <h5 id="proj">PROJECTS?</h5>
             <div class="container">
               <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                     <ol class="carousel-indicators">
@@ -93,7 +99,7 @@
 
 
 
-        <h5>MEMBERS!</h5>
+        <h5 id="mems">MEMBERS!</h5>
         <div class="container">
             <div class="row">
 
