--- a/index2.html
+++ b/index2.html
@@ -42,6 +42,7 @@
           </nav>
 
           <h5 id="intro">INTRODUCTION</h5>
+          <div class="container">
           <div class="jumbotron jumbotron-fluid">
                 <div class="container">
                     <p>
@@ -56,6 +57,7 @@
                     Gregory May is an eclectic individual. He has been an engineer, electrician, writer, and now web developer. He enjoys working with big data and providing unique viewpoints to whatever situation arises.
                     </p>
                 </div>
+              </div>
               </div>
 
 
@@ -106,7 +108,7 @@
                 <div class="col-sm-3">
                         <div class="jumbotron jumbotron-fluid">
                                 <div class="container">
-                                  <h5>Thomas Burchardt</h5>
+                                  <h5>Thomas Burchhardt</h5>
                                   <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
 
         <!-- Button trigger modal -->
