--- a/index2.html
+++ b/index2.html
@@ -23,26 +23,26 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse justify-content-center" id="navbarTogglerDemo01">
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
               <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="#intro">Introduction</a>
+                    <a class="nav-link" href="#intro"><button type="button" class="btn btn-outline-light btn-sm">Introduction</button></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#proj">Projects</a>
+                    <a class="nav-link" href="#proj"><button type="button" class="btn btn-outline-light btn-sm">Projects</button></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#mems">Members</a>
+                    <a class="nav-link" href="#mems"><button type="button" class="btn btn-outline-light btn-sm">Members</button></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#contact">Contact Us!</a>
+                    <a class="nav-link" href="#contact"><button type="button" class="btn btn-outline-light btn-sm">Contact Us!</button></a>
                 </li>
               </ul>
             </div>
           </nav>
 
           <h5 id="intro">INTRODUCTION</h5>
-          <div class="container">
+          <div>
           <div class="jumbotron jumbotron-fluid">
                 <div class="container">
                     <p>
@@ -108,7 +108,7 @@
                 <div class="col-sm-3">
                         <div class="jumbotron jumbotron-fluid">
                                 <div class="container">
-                                  <h5>Thomas Burchhardt</h5>
+                                  <h5>Thomas Burchardt</h5>
                                   <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
 
         <!-- Button trigger modal -->
