--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   <div class="row">
       <div class="card col-sm-3">
           <h5>Tom Burchhardt</h5>
-          <img src="../amalgam-website/images/tom.jpeg" class="card-img-top" alt="..." style=" max-width: 250px; max-height: 250px !important;">
+          <img src="./images/tom.jpeg" class="card-img-top" alt="..." style=" max-width: 250px; max-height: 250px !important;">
           <div class="card-body">
             <!-- Button trigger modal -->
             <button type="button" class="btn btn-light badge-pill" data-toggle="modal" data-target="#exampleModalCenter">Links!</button>
