removed testing files and fixed images

--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
                     </ol>
                     <div class="carousel-inner" role="listbox" style=" width:100%; height: 400px !important;">
                       <div class="carousel-item active">
-                        <img src="../amalgam-website/images/starrlightbackground.png" class="d-block w-100" alt="...">
+                        <img src="./images/starrlightbackground.png" class="d-block w-100" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="../amalgam-website/images/starrlightwebsite.png" class="d-block w-100" alt="...">
+                        <img src="./images/starrlightwebsite.png" class="d-block w-100" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="../amalgam-website/images/starrlighttasting.png" class="d-block w-100" alt="...">
+                        <img src="./images/starrlighttasting.png" class="d-block w-100" alt="...">
                       </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -99,7 +99,7 @@
   <div class="row">
       <div class="card col-sm-3">
           <h5>Tom Burchhardt</h5>
-          <img src="../amalgam-website/images/tom.jpeg" class="card-img-top" alt="..." style=" max-width: 250px; max-height: 250px !important;">
+          <img src="./images/tom.jpeg" class="card-img-top" alt="..." style=" max-width: 250px; max-height: 250px !important;">
           <div class="card-body">
             <!-- Button trigger modal -->
             <button type="button" class="btn btn-light badge-pill" data-toggle="modal" data-target="#exampleModalCenter">Links!</button>
@@ -129,7 +129,7 @@
 
       <div class="card col-sm-3">
           <h5>Karsten Rabe</h5>
-          <img src="../amalgam-website/images/karsten.png" class="card-img-top" alt="..." style=" max-width: 250px; max-height: 250px !important;">
+          <img src="./images/karsten.png" class="card-img-top" alt="..." style=" max-width: 250px; max-height: 250px !important;">
           <div class="card-body">
             <!-- Button trigger modal -->
             <button type="button" class="btn btn-light badge-pill" data-toggle="modal" data-target="#exampleModalCenter">Links!</button>
@@ -159,7 +159,7 @@
 
       <div class="card col-sm-3">
           <h5>Calvin Leung</h5>
-          <img src="../amalgam-website/images/calvin.jpg" class="card-img-top" alt="..." style=" max-width: 250px; max-height: 250px !important;">
+          <img src="./images/calvin.jpg" class="card-img-top" alt="..." style=" max-width: 250px; max-height: 250px !important;">
           <div class="card-body">
             <!-- Button trigger modal -->
             <button type="button" class="btn btn-light badge-pill" data-toggle="modal" data-target="#exampleModalCenter">Links!</button>
@@ -189,7 +189,7 @@
 
       <div class="card col-sm-3">
           <h5>Gregory May</h5>
-          <img src="../amalgam-website/images/greg.png" class="card-img-top" alt="..." style=" max-width: 250px; max-height: 250px !important;">
+          <img src="./images/greg.png" class="card-img-top" alt="..." style=" max-width: 250px; max-height: 250px !important;">
           <div class="card-body">
             <!-- Button trigger modal -->
             <button type="button" class="btn btn-light badge-pill" data-toggle="modal" data-target="#exampleModalCenter">Links!</button>
@@ -222,7 +222,40 @@
 
 
 
-        <div id="contact" class="section scrollspy">
+        
+
+<h2>Get in Touch</h2>
+<form>
+    <div class="form-group">
+      <label for="exampleInputEmail1">Email address</label>
+      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+    </div>
+    <div class="form-group">
+      <label for="exampleInputPassword1">Password</label>
+      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+    </div>
+    <div class="form-group form-check">
+      <input type="checkbox" class="form-check-input" id="exampleCheck1">
+      <label class="form-check-label" for="exampleCheck1">Check me out</label>
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+
+
+
+  <div class="jumbotron jumbotron-fluid">
+      <div class="container">
+        <h1 class="display-4">Fluid jumbotron</h1>
+        <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+      </div>
+    </div>
+
+
+
+
+
+<div id="contact" class="section scrollspy">
             <div id="contact">
               <h2>Get in Touch</h2>
               <div id="contact-form">
