tweaked my personal info

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <p>
                     Amalgam Innovations came into being when the four friendships were forged with the purpose of web development. All four partners have a passion for wines and beers. These passions range from simply enjoying the multitude and complexity of flavors to actually brewing their own beverages.
                     <br><br>
-                    Thomas Burchardt has a multitude of experience from being a science teacher, entrepreneurial work, and now web developer. He has consistently been able to provide ideas and overcome obstacles to bring those ideas to fruition.
+                    Tom Burchhardt has a multitude of experience from being an educator, entrepreneurial work, and now web developer. He has consistently been able to provide ideas and overcome obstacles to bring those ideas to fruition.
                     <br><br>
                     Karsten Rabe is a computer and technology aficionado. He has worked abroad in the peace corps, is multi-lingual,  and is exceptionally creative. During his time as a web developer others have learned to look to him for creative ways to solve web application problems.
                     <br><br>
