--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                       <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                       <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
                     </ol>
-                    <div class="carousel-inner" role="listbox" style=" width:100%; height: 400px !important;">
+                    <div class="carousel-inner" role="listbox" style=" width:100%; height: 350px !important;">
                       <div class="carousel-item active">
                         <img src="./images/starrlightbackground.png" class="d-block w-100" alt="...">
                       </div>
@@ -220,64 +220,64 @@
 </div><!--closes closes container-->
 
 
+<div class="container">
+<div class= "row">
 
+<div class="col-sm-2">
+</div>
 
-        
-
-<h2>Get in Touch</h2>
-<form>
-    <div class="form-group">
-      <label for="exampleInputEmail1">Email address</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-    </div>
-    <div class="form-group">
-      <label for="exampleInputPassword1">Password</label>
-      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-    </div>
-    <div class="form-group form-check">
-      <input type="checkbox" class="form-check-input" id="exampleCheck1">
-      <label class="form-check-label" for="exampleCheck1">Check me out</label>
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-  </form>
-
-
-
-  <div class="jumbotron jumbotron-fluid">
-      <div class="container">
-        <h1 class="display-4">Fluid jumbotron</h1>
-        <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+<div class="col-sm-8">
+  <div class="jumbotron jumbotron-fluid" id="contact">
+      <h3>Get in Touch!</h2>
+          <form method="POST" action="https://formspree.io/amalgaminnovationsllc@gmail.com">
+              <div class="form-group">
+                <label for="exampleInputEmail1" style="color: white;">Email address</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                <small id="emailHelp" class="form-text text-muted" style="color: white;">We'll never share your email with anyone else.</small>
+              </div>
+              <div class="form-group">
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="5" placeholder="Enter message here."></textarea>
+              </div>
+              <div class="form-group">
+                  <button type="submit" class="btn btn-outline-light badge-pill">Submit</button>
+              </div>
+            </form>
       </div>
     </div>
 
+  <div class="col-sm-2">
+  </div>
+
+</div>
+</div>
 
 
 
 
+<!-- 
 <div id="contact" class="section scrollspy">
             <div id="contact">
               <h2>Get in Touch</h2>
               <div id="contact-form">
                   <form method="POST" action="https://formspree.io/amalgaminnovationsllc@gmail.com">
-                      <input type="hidden" name="_subject" value="Contact request from personal website" />
+                      <input type="hidden" name="_subject" value="Contact request from personal website">
                       <input type="email" name="_replyto" placeholder="Your email" required>
                       <textarea name="message" placeholder="Your message" required></textarea>
                       <button type="submit">Send</button>
                   </form>
               </div>
-              <!-- End #contact-form -->
+
           </div>
-          <!-- End #contact -->
 
 
 
+ -->
 
 
 
 
       <!-- Footer -->
-      <!-- <footer class="page-footer">
+      <footer class="page-footer">
           <div class="container">
           </div>
           <div class="footer-copyright">
@@ -287,7 +287,7 @@
             </div>
           </div>
         </footer>
-             -->
+            
   
 
       <!--JavaScript at end of body for optimized loading-->
