minor font changes

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                       <br><br>
                       The pioneering project for AI is Silenus, a wine tasting application. All four partners have a passion for wines and beers. These passions range from simply enjoying the multitude and complexity of flavors to actually brewing their own beverages. The idea arose for an application to assist craft beverage companies but giving a consumer friendly tasting application that collects useful data for the company to utilize and so, AI was born!
                       <br><br><br><br>
-                      <h2>We offer a wide range of opportunities to help your business grow!</h2>
+                      <h2 class="incFont">We offer a wide range of opportunities to help your business grow!</h2>
                    
                     <br><br>
                   
